# simple-postgres-etl

./: .env  Cargo.toml  README.md
src/: main.rs
