[package]
name = "hellow_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
postgres = { version = "0.19.5", features = ["with-serde_json-1"]}
serde_json = "1.0.96"
ureq = "2.6.2"
